2020-09-08  Simon Fraser  <simon.fraser@apple.com>

        Add a standalone version of the test runtime tree map viewer, that can accept stats.json from a local test run
        https://bugs.webkit.org/show_bug.cgi?id=189396

        Reviewed by Darin Adler.
        
        Add the viewer and a sample stats.json file. Devs can drag a stats.json file into test-duration-treemap.html to
        see the map (or specify it as a url parameter).

        A future patch will hook this up to results.html.

        * fast/harness/stats.json: Added.
        * fast/harness/test-duration-treemap-expected.txt: Added.
        * fast/harness/test-duration-treemap.html: Added.

2020-09-08  Chris Lord  <clord@igalia.com>

        [GStreamer] Some convolvernode tests are flaky crashing
        https://bugs.webkit.org/show_bug.cgi?id=216118

        Unreviewed test gardening.

        Some tests are causing random, subsequently run tests to crash. Skip
        these tests on affected platforms.

        * platform/glib/TestExpectations:

2020-09-08  Karl Rackler  <rackler@apple.com>

        Removed 6 forms and 3 tables test expectations for Big Sur
        rdar://68372418

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2020-09-08  Rob Buis  <rbuis@igalia.com>

        Fix crash in image-loading-lazy-slow.html WPT test
        https://bugs.webkit.org/show_bug.cgi?id=215998

        Reviewed by Youenn Fablet.

        Mark image-loading-lazy-slow.html as ImageOnlyFailure.

        * TestExpectations:

2020-09-07  Chris Dumez  <cdumez@apple.com>

        AudioParam.cancelAndHoldAtTime() is missing
        https://bugs.webkit.org/show_bug.cgi?id=215947
        <rdar://problem/68362061>

        Reviewed by Darin Adler.

        * webaudio/audioparam-cancel-and-hold-expected.txt: Added.
        * webaudio/audioparam-cancel-and-hold.html: Added.
        * webaudio/cancel-values-crash-913217-expected.txt: Added.